syntax = "proto3";

option java_package = "io.github.tonnyl.moka.proto";
option java_multiple_files = true;

message Account {
  int32 id = 1;
  string access_token = 2;
  string login = 3;
}

message SignedInAccounts {
  repeated Account accounts = 1;
}